[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skewtpy"
version = "0.1.0"
description = "Simple SkewT–LogP diagrams for atmospheric soundings in Python."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [{name = "Alejandro Jaramillo-Moreno"}]
dependencies = ["numpy", "matplotlib"]

[project.urls]
Homepage = "https://github.com/ajaraminimbus/skewtpy"
Repository = "https://github.com/ajaraminimbus/skewtpy"
Issues = "https://github.com/ajaraminimbus/skewtpy/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
